# north

./: .editorconfig  .pre-commit-config.yaml  mise.toml  north.code-workspace  northctl.py  pyproject.toml  pyproject.toml.bak  ruff.toml  we-love.code-workspace
northctl/: northctl.py  pyproject.toml
scripts/: README.md  check_package_pypi.py  publish_newest.py  update-config.sh  update_north_config.py  update_we_love_config.py
src/north-registry/north/registry/: registerable.py
src/north-str/north/str/: diff.py
src/north/matchbox/: guards.py  guards_test.py
src/north/string/tests/: case_test.py
