[project]
name            = "north"
version         = "0.1.0"
description     = "Add your description here"
readme          = "README.md"
requires-python = ">=3.13"

dependencies = ["pydantic>=2", "rich>=14", "structlog>=25", "tomlkit>=0.13"]

[build-system]
requires      = ["uv_build>=0.6,<0.7"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
