[build-system]
build-backend = "uv_build"
requires = [
  "uv-build>=0.8,<0.9",
]

[dependency-groups]
dev = [
  "click",
  "pre-commit",
  "pyproject-fmt>=2.6",
  "pytest>=8.4",
  "ruff",
  "tomli-w",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
extend-select = [
  "I",
]
ignore = [
  "E501",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
  "--verbose",
  "--tb=short",
  "--strict-markers",
  "--strict-config",
  "--disable-warnings",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
]

[tool.uv.build-backend]
namespace = true
module-root = "packages"

[tool.uv.workspace]
members = [
  "packages/north",
  "packages/north-cli",
  "packages/north-funcy",
  "packages/north-fzf",
  "packages/north-matchbox",
  "packages/north-pydantic",
  "packages/north-registry",
  "packages/north-string",
  "packages/north-typeid",
]

[tool.uv.sources.north-typeid]
workspace = true

[tool.uv.sources.north-cli]
workspace = true

[tool.uv.sources.north-funcy]
workspace = true

[tool.uv.sources.north-fzf]
workspace = true

[tool.uv.sources.north-matchbox]
workspace = true

[tool.uv.sources.north-pydantic]
workspace = true

[tool.uv.sources.north-registry]
workspace = true

[tool.uv.sources.north-string]
workspace = true
