[project]
name = "northctl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.2",
    "rich>=14.0.0",
    "structlog>=25.2.0",
    "tomlkit>=0.13.2",
]

[build-system]
requires      = ["hatchling>=1.11,<2"]
build-backend = "hatchling.build"
